--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
   </head>
   <body>
     <div style = "text-align: center;
-    color: #f1f1f1;
     padding: 50px;
-    
+    background-color:#d18888;
+
     ">
       <img
-        src="E:\desktop\46a25584662abd9c0f016fcb012d9112.jpeg"
+        src="E:\desktop\head0001.jpeg"
         weight="80"
         height="80"
         alt="test image"
       />
     </div>
+    <div>
+      <p>This is a test HTML file.</p>
+      <br />
+      <p>生如夏花之绚烂，死如秋叶之静美。</p>
+    </div>
     <div></div>
-    <div></div>
-    <p>This is a test HTML file.</p>
-    <br />
-    <p>生如夏花之绚烂，死如秋叶之静美。</p>
+    
   </body>
 </html>
