--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <div style = "text-align: center;
-    padding: 50px;
+    padding: 40px;
     background-color:#d18888;
 
     ">
       <img
-        src="E:\desktop\head0001.jpeg"
+        src="head0001.jpeg"
         weight="80"
         height="80"
         alt="test image"
