--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       <p>This is a test HTML file.</p>
       <br />
       <p>生如夏花之绚烂，死如秋叶之静美。</p>
+      <audio controls autoplay loop muted preload="auto">
+        <source src="HTML\AYANE-泣きたい夜.mp3" type="audio/mpeg" />
+
+        Your browser does not support the audio element.
+      </audio>
     </div>
     <div></div>
     
