--- a/index.html
+++ b/index.html
@@ -1,34 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>this is my fisrt HTML file</title>
-  </head>
-  <body>
-    <div style = "text-align: center;
-    padding: 40px;
-    background-color:#d18888;
+<html lang="zh-CN">
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>苦节の小窝</title>
+</head>
+
+<body>
+  <div style="
+    text-align: center; 
+    padding: 50px; 
+    background-color: #d18888">
+    <img src="E:\code\web\HTML\head0001.jpeg" weight="80" height="80" alt="asuka" />
+  </div>
+  <div style="text-align: center;
+    max-width: 700px;
+    margin: 30px auto;
+    padding: 15px; 
+    line-height: 1.7;
     ">
-      <img
-        src="head0001.jpeg"
-        weight="80"
-        height="80"
-        alt="test image"
-      />
-    </div>
-    <div>
-      <p>This is a test HTML file.</p>
-      <br />
-      <p>生如夏花之绚烂，死如秋叶之静美。</p>
+    <p>那想做好人的，在门外敲着门；那爱人的看见门敞开着。</p>
+    <p>He who wants to do good knocks at the gate; He who loves finds the gate open.</p>
+  </div>
+  <div>
+    <div style="
+    text-align: center; 
+    padding: 15px; 
+    background-color: #ffffff">
+    <img src="E:\code\web\HTML\泣きたい夜 AYANE.png" weight="200" height="200" alt="泣きたい夜 AYANE"/>
+    <p>泣きたい夜 - AYANE</p>
+  </div>
+    <style>
+      .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 40vh;
+      }
+    </style>
+    <div class="container">
       <audio controls autoplay loop muted preload="auto">
-        <source src="AYANE-泣きたい夜.mp3" type="audio/mpeg" />
+        <source src="E:\code\web\HTML\AYANE-泣きたい夜.mp3" type="audio/mpeg" />
 
         Your browser does not support the audio element.
       </audio>
     </div>
-    <div></div>
-    
-  </body>
+    <div style="text-align: center; padding: 40px; background-color: #d18888">
+      <p>友情链接</p>
+      <a href="https://space.bilibili.com/57413845" target="_blank">哔哩哔哩</a>
+    </div>
+</body>
+
 </html>
