--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     text-align: center; 
     padding: 50px; 
     background-color: #d18888">
-    <img src="E:\code\web\HTML\head0001.jpeg" weight="80" height="80" alt="asuka" />
+    <img src="head0001.jpeg" weight="80" height="80" alt="asuka" />
   </div>
   <div style="text-align: center;
     max-width: 700px;
