--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </style>
     <div class="container">
       <audio controls autoplay loop muted preload="auto">
-        <source src="E:\code\web\HTML\AYANE-泣きたい夜.mp3" type="audio/mpeg" />
+        <source src="AYANE-泣きたい夜.mp3" type="audio/mpeg" />
 
         Your browser does not support the audio element.
       </audio>
