--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     text-align: center; 
     padding: 15px; 
     background-color: #ffffff">
-    <img src="E:\code\web\HTML\泣きたい夜 AYANE.png" weight="200" height="200" alt="泣きたい夜 AYANE"/>
+    <img src="泣きたい夜 AYANE.png" weight="200" height="200" alt="泣きたい夜 AYANE"/>
     <p>泣きたい夜 - AYANE</p>
   </div>
     <style>
